syntax = "proto3";

option go_package = "raftpb";

service Raft {
  rpc RequestVote (RequestVoteRequest) returns (RequestVoteResponse);
  rpc AppendEntries (AppendEntriesRequest) returns (AppendEntriesResponse);
  rpc Write (WriteRequest) returns (WriteResponse);
  rpc DumpState (DumpStateRequest) returns (DumpStateResponse);
}

message RequestVoteRequest {
  uint64 term = 1;
  string candidate_id = 2;
  uint64 last_log_term = 3;
  uint64 last_log_index = 4;
}

message RequestVoteResponse {
  uint64 term = 1;
  bool vote_granted = 2;
}

message AppendEntriesRequest {
  uint64 term = 1;
  string leader_id = 2;
  uint64 prev_log_term = 3;
  uint64 prev_log_index = 4;
  uint64 leader_commit_index = 5;
  repeated LogEntry entries = 6;
}

message AppendEntriesResponse {
  uint64 term = 1;
  bool success = 2;
}

message LogEntry {
  uint64 term = 1;
  uint64 index = 2;
  bytes data = 3;
}

message WriteRequest {
  bytes data = 1;
}

message WriteResponse {
}

message DumpStateRequest {
}

message DumpStateResponse {
  string state = 1;
}
